[package]
name = "symbols"
version = "0.2.0"
authors = ["Matt Schulte <schultetwin1@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
b2creds = "0.2.0"
clap = "4.5"
log = "0.4"
pretty_env_logger = "0.5"
ignore = "0.4"
symbolic-debuginfo = "12.8.0"
tokio = { version = "1.37.0", features = ["full"] }
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.10"
url = "2.5.0"
directories = "5.0.1"
walkdir = "2"
open = "5.1.2"
rand = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json"] }
strum = { version = "0.26.1", features = ["derive"] }
keyring = "2.3.2"
rpassword = "7"
sha2 = "0.10"
data-encoding = "2.5.0"
aws-config = "1.1.10"
aws-sdk-s3 = "1.33.0"

[dependencies.rusqlite]
version = "0.29.0"
features = ["bundled"]
