[package]
name = "symbols"
version = "0.2.0"
authors = ["Matt Schulte <schultetwin1@gmail.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
b2creds = "0.2.0"
clap = "4.5"
log = "0.4"
pretty_env_logger = "0.5"
ignore = "0.4"
symbolic-debuginfo = "12.13.4"
tokio = { version = "1.43.0", features = ["full"] }
hex = "0.4.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.19"
url = "2.5.4"
directories = "6.0.0"
walkdir = "2"
open = "5.3.2"
rand = "0.8"
reqwest = { version = "0.12", features = ["blocking", "json"] }
strum = { version = "0.26.3", features = ["derive"] }
keyring = "3.6.1"
rpassword = "7"
sha2 = "0.10"
data-encoding = "2.5.0"
aws-config = "1.5.12"
aws-sdk-s3 = "1.57.0"

[dependencies.rusqlite]
version = "0.29.0"
features = ["bundled"]
